initial helm commit
initial helm commit

> initial helm chart import. see README.md for details
> updated mongo configuration to support deployment
> updated integration tests
> added redirect to simplify helm test
> test pod for validating mongo connection